1.5/src/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / 
  labels:
    name: myingress
spec:
  ingressClassName: nginx
  rules:
  - host: host-test.ru
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-frontend
            port: 
              number: 80
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: svc-backend
            port: 
              number: 80
